bon/tests/integration/ui/compile_fail/misc.stderr
error: Only simple identifiers in function arguments are supported, because parameter names influence the setter method names. If you need to destructure a function parameter, then do it inside of the function body.
 --> tests/integration/ui/compile_fail/misc.rs:4:18
  |
4 | fn destructuring((x, y): (u32, u32)) {
  |                  ^^^^^^

error: No need to write `= true`. Just mentioning the attribute is enough to set it to `true`, so remove the `= true` part.
  --> tests/integration/ui/compile_fail/misc.rs:10:47
   |
10 | fn explicit_into_equals_true(#[builder(into = true)] _x: u32) {}
   |                                               ^^^^

error: This attribute is redundant and can be removed. By default the the type of this function argument already qualifies for `impl Into`.
  --> tests/integration/ui/compile_fail/misc.rs:13:45
   |
13 | fn unnecessary_into_override_true(#[builder(into)] _x: String) {}
   |                                             ^^^^

error: This attribute is redundant and can be removed. By default the the type of this function argument already doesn't qualify for `impl Into`.
  --> tests/integration/ui/compile_fail/misc.rs:16:53
   |
16 | fn unnecessary_into_override_false(#[builder(into = false)] _x: u32) {}
   |                                                     ^^^^^

error: #[builder(required)] can only be applied to `bool`. All other types except for `Option<T>` are required by default already
  --> tests/integration/ui/compile_fail/misc.rs:19:28
   |
19 | fn required_bool(#[builder(required)] _x: u32) {}
   |                            ^^^^^^^^

error: `Option` and #[builder(required)] attributes are mutually exclusive. `Option`s are optional by definition and this can't be changed
  --> tests/integration/ui/compile_fail/misc.rs:22:30
   |
22 | fn required_option(#[builder(required)] _x: Option<u32>) {}
   |                              ^^^^^^^^

error: expected at least one parameter in parentheses
  --> tests/integration/ui/compile_fail/misc.rs:24:11
   |
24 | #[builder(start_fn())]
   |           ^^^^^^^^
